Leptos sort of working

--- a/leptos-frontend/index.html
+++ b/leptos-frontend/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<html>
+  <head>
+  <link data-trunk rel="css" href="./index.css"/>
+  </head>
+  <body></body>
+</html>
+
+<!--<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
@@ -6,7 +14,6 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <!-- Leptos mounts into the body -->
     <div id="app"></div>
 
     <script type="module">
@@ -16,4 +23,4 @@
       });
     </script>
   </body>
-</html>
+</html> -->
